--- a/tienda_canelitos/templates/admin_inventory.html
+++ b/tienda_canelitos/templates/admin_inventory.html
@@ -4,21 +4,21 @@
 <table>
     <tr>
         <th>Nombre del producto</th>
-        <th>Descripcion</th>
+        <th>Descripción</th>
         <th>Fecha de compra</th>
-        <th>Activo</th>
+        <th>Estado</th>
     </tr>
     <tr>
-        <td>refresco coca cola</td>
-        <td>cocacola</td>
-        <td>15 oct 2025</td>
-        <td>vComoletedv600L</td>
+        <td>Refresco Coca-Cola 355ml</td>
+        <td>Bebida gaseosa</td>
+        <td>15 oct 2024</td>
+        <td>Completado</td>
     </tr>
     <tr>
-        <td>Botella de agua</td>
-        <td>aguade1l</td>
-        <td>15 oct 2025</td>
-        <td>Blockedv</td>
+        <td>Botella de agua 1L</td>
+        <td>Agua purificada</td>
+        <td>15 oct 2024</td>
+        <td>Bloqueado</td>
     </tr>
 </table>
 
