--- a/tienda_canelitos/templates/admin_orders.html
+++ b/tienda_canelitos/templates/admin_orders.html
@@ -18,6 +18,6 @@
 <p>No hay pedidos registrados.</p>
 {% endif %}
 
-<a class="btn" href="{{ url_for('admin_report') }}">Descargar reporte CSV</a>
+<a class="btn" href="{{ url_for('admin_report') }}">Descargar reporte HTML</a>
 <a class="btn" href="{{ url_for('admin') }}">Volver</a>
 {% endblock %}
