--- a/tienda_canelitos/templates/cart.html
+++ b/tienda_canelitos/templates/cart.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Tu carrito de compras ：</h2>
+<h2>Tu carrito de compras</h2>
 {% if cart %}
 <table>
     <tr>
