--- a/tienda_canelitos/templates/contact.html
+++ b/tienda_canelitos/templates/contact.html
@@ -2,12 +2,12 @@
 {% block content %}
 <h2>Contactanos</h2>
 <form>
-    <label>Correo/Telefono：</label>
+    <label>Correo/Teléfono:</label>
     <input type="text">
-    <label>Comentario：</label>
+    <label>Comentario:</label>
     <textarea></textarea>
     <br>
     <button type="submit" class="btn">Enviar</button>
 </form>
-<p>Lontactarse con un asesor：7298054028</p>
-{% endblock %}
+<p>Contactarse con un asesor: 7298054028</p>
+{% endblock %}       
